--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
+    "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.1",
     "webpack-stream": "^5.2.1"
   },
